...
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/text_postcode"
            android:layout_width="@dimen/widget_width_1"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:maxLength="50"
            android:text="@string/instruction_postcode" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"
            android:text="@string/location_divider" />

        <LinearLayout
            android:layout_width="wrap_content"
...
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/check_minor_ailments"
            android:layout_marginBottom="37dp"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableStart="@drawable/ic_check"
            android:text="@string/button_filter_text" />

</android.support.v7.widget.LinearLayoutCompat>
...
