<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/second_fragment_layout"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <!-- Layout for second fragment of activity ListPharmaciesActivity -->

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textSize="18sp"
        android:background="@color/colorThemeMiddle"
        android:textColor="@color/white"
        android:padding="6dp"
        android:gravity="center_vertical"/>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/listview_pharmacys_details"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </android.support.v7.widget.ListViewCompat>

    </RelativeLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="end">

        <Button
            android:id="@+id/button_to_map"
            android:background="@color/colorThemeMiddle"
            android:textColor="@color/white"
            android:padding="4dp"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_location_on_map" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services_in_welsh"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="6dp">

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/listview_pharmacys_services"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>