...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/listview_pharmacies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:listSelector="@android:color/transparent" />

...
